--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,4 +1,4 @@
 .Tilt {
     font-family: sans-serif;
-    background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+    background: linear-gradient(89deg,#04C8DE 0%, rgb(156, 36, 211) 100%);
 }
