--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background: linear-gradient(89deg, rgb(156, 36, 211) 0%, #04C8DE 100%);
+  background: linear-gradient(88deg, rgb(127, 221, 155) 0%, rgb(154, 192, 248) 100%);
 }
 button {
   cursor: pointer;
