--- a/src/components/logo/logo.css
+++ b/src/components/logo/logo.css
@@ -1,4 +1,4 @@
 .Tilt {
     font-family: sans-serif;
-    background: linear-gradient(89deg,#04C8DE 0%, rgb(156, 36, 211) 100%);
+    background: linear-gradient(88deg, rgb(127, 221, 155) 0%, rgb(154, 192, 248) 100%);
 }
